# nexa-sdk

./: .bazelignore  .bazelrc  .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  HANDOFF-android-aar.md  LICENSE  MODULE.bazel  NOTICE  README.md  README_zh-CN.md  geniex-template.json  repolint.json
bindings/go/: BUILD.bazel  asr.go  common.go  common_test.go  cv.go  device.go  diarize.go  embedder.go  go.mod  helpers.go  image_gen.go  llm.go  ml.go  model_manager.go  reranker.go  tts.go  vlm.go
bindings/python/: BUILD.bazel  BUILD.md  README.md  _geniex_backend.py  _sdk_fetch.py  _shared_setup.py  setup.py
bindings/python/examples/: llm.py
bindings/python/geniex/: __init__.py  _progress.py  _version.py  auto.py  cli.py  model_manager.py  modeling.py  tokenizer.py
bindings/python/geniex/_ffi/: __init__.py  _api.py  _lib.py  _types.py
bindings/python/geniex/generation/: __init__.py  config.py  output.py  streamer.py
bindings/python/geniex/geniex_sdk/: __init__.py  _api.py  _lib.py  _types.py
bindings/python/tests/: __init__.py  conftest.py  test_cli.py  test_llm_llama_cpp.py  test_llm_qairt.py  test_local_aihub_pull.py  test_metadata.py  test_model_manager.py  test_progress.py  test_vlm_llama_cpp.py
bindings/python/tests/unit/: test_cli_load_banner.py  test_default_precision.py  test_error_messages.py  test_modeling_decode.py  test_qairt_coerce.py  test_quant_validation.py  test_sdk_fetch.py
cli/: BUILD.bazel  Makefile  README.md  README_zh.md  go.mod  go.sum
cli/cmd/geniex/: BUILD.bazel  config.go  help.go  infer.go  main.go  model.go  model_test.go  run.go  serve.go  update.go  update_test.go  version.go
cli/cmd/geniex/common/: BUILD.bazel  console_other.go  console_windows.go  error.go  error_test.go  log.go  process.go  process_test.go  repl.go  sdk.go  util_linux.go  util_windows.go
cli/internal/config/: BUILD.bazel  config.go  config_test.go  model_mapping.go  model_mapping_test.go
cli/internal/downloader/: BUILD.bazel  http.go  http_test.go
cli/internal/model_hub/: BUILD.bazel  errors.go  model_hub.go  model_hub_aihub.go  model_hub_hf.go  model_hub_hf_test.go  model_hub_localfs.go  model_hub_modelscope.go  model_hub_s3.go  model_hub_test.go  model_hub_volces.go
cli/internal/model_hub/aihub/: BUILD.bazel  aihub.go  selector.go  selector_test.go  types.go
cli/internal/qaihm/: BUILD.bazel  info.proto  manifest.proto  model_metadata.proto  numerics.proto  perf.proto  platform.proto  release_assets.proto
cli/internal/qaihm/shared/: precision.proto  range.proto  runtime.proto  tensor_spec.proto  tool_versions.proto
cli/internal/readline/: BUILD.bazel  action.go  buffer.go  history.go  package_test.go  readline.go  terminal.go  terminal_darwin.go  terminal_linux.go  terminal_windows.go
cli/internal/record/: BUILD.bazel  package_test.go  record.go  stream_record.go
cli/internal/render/: BUILD.bazel  progressbar.go  spinner.go  theme.go  theme_test.go
cli/internal/store/: BUILD.bazel  config.go  errors.go  lock.go  manager.go  model.go  package_test.go
cli/internal/testutil/: BUILD.bazel  capture.go
cli/internal/types/: BUILD.bazel  model.go  utils.go
cli/release/linux/: BUILD.bazel  Dockerfile  check.sh  entrypoint.sh  install.sh  package.sh  trixie.lock.json  trixie.yaml
cli/release/windows/: BUILD.bazel  geniex-cli-setup.iss  geniex_installer.iss  geniex_launcher.py  iscc.bzl
cli/server/: BUILD.bazel  package_test.go  route.go  server.go
cli/server/docs/: BUILD.bazel  package_test.go  swagger.go  swagger.yaml
cli/server/handler/: BUILD.bazel  audio.go  audio_test.go  chat.go  cv.go  embeddings.go  images.go  model.go  package_test.go  reranking.go
cli/server/middleware/: BUILD.bazel  auth.go  cors.go  gil.go  package_test.go
cli/server/service/: BUILD.bazel  keepalive.go  keepalive_test.go  package_test.go  service.go
cli/server/utils/: BUILD.bazel  common.go  common_test.go
sdk/: .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  s3_sdk_download.bzl
sdk/benchmark/: CMakeLists.txt  README.md  benchmark.c
sdk/benchmark/qdc/: _qdc.py  bench-models.json  run_qdc_jobs.py  scorecard-models.json
sdk/benchmark/qdc/linux/: run_linux.sh
sdk/benchmark/qdc/tests/: conftest.py  test_bench.py  test_scorecard.py  utils.py
sdk/benchmark/qdc/windows/: run_windows.ps1
sdk/cmake/: arm64-android-llvm.cmake  arm64-linux-gnu.cmake  arm64-windows-llvm.cmake  qairt.cmake
sdk/include/: build_config.h  geniex.h  logging.h  profile.h  registry.h  utils.h  validation.h
sdk/include/plugin/: IAsr.h  ICv.h  IDiarize.h  IEmbedding.h  IImageGen.h  ILlm.h  IReranker.h  ITts.h  IValidatable.h  IVlm.h  Plugin.h
sdk/model-manager/: Cargo.toml
sdk/model-manager/crates/core/: Cargo.toml
sdk/model-manager/crates/core/examples/: bench_pull.rs
sdk/model-manager/crates/core/src/: config.rs  error.rs  lib.rs  logging.rs  manifest.rs  manifest_builder.rs  paths.rs  (+7 more)
sdk/model-manager/include/: geniex_model.h
sdk/model-manager/tests/: test_model_manager.c
sdk/patches/: llama-hexagon-release-sessions.patch
sdk/plugins/: CMakeLists.txt
sdk/plugins/llama_cpp/: CMakeLists.txt
sdk/plugins/llama_cpp/include/: embedding.h  htp_session.h  llm.h  params.h  profiler.h  rerank.h  threadpool.h  vlm.h
sdk/plugins/llama_cpp/src/: CMakeLists.txt  embedding.cpp  htp_session.cpp  llm.cpp  params.cpp  plugin.cpp  profiler.cpp  rerank.cpp  threadpool.cpp  vlm.cpp
sdk/plugins/qairt/: CMakeLists.txt
sdk/plugins/qairt/include/: llm.h  path_utils.h  qnn_runtime_utils.h  vlm.h
sdk/plugins/qairt/src/: CMakeLists.txt  llm.cpp  log_filter.cpp  plugin.cpp  vlm.cpp
sdk/src/: CMakeLists.txt  asr.cpp  cv.cpp  diarize.cpp  embedding.cpp  error.cpp  image-gen.cpp  llm.cpp  ml.cpp  rerank.cpp  tts.cpp  utils.cpp  version.cpp  vlm.cpp
sdk/tests/benchmark/: README.md  benchmark.c
sdk/tests/benchmark/qdc/: run_qdc_jobs.py  scorecard-models.json
sdk/tests/include/: util.h
sdk/tests/src/: CMakeLists.txt  asr.cpp  cv.cpp  device.cpp  diarize.cpp  embedding.cpp  image-gen.cpp  llm.cpp  rerank.cpp  tts.cpp  version.cpp  vlm.cpp
(+363 files in other folders)
