module(name = "geniex")

# ============ common ============

bazel_dep(name = "gazelle", version = "0.50.0", repo_name = "bazel_gazelle")

# ============ c/cpp ============

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# third-party
new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
new_local_repository(
    name = "llama_cpp_src",
    path = "third-party/llama.cpp",
    build_file = "//sdk/plugins/llama_cpp:llama.cpp.bazel",
)
new_local_repository(
    name = "geniex_qairt_src",
    path = "third-party/geniex-qairt",
    build_file = "//sdk/plugins/qairt:geniex-qairt.bazel",
)

# ============ go ============

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

# go toolchain
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//cli:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_smithy_go",
    "com_github_bytedance_sonic",
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_huh_spinner",
    "com_github_dustin_go_humanize",
    "com_github_gin_gonic_gin",
    "com_github_gofrs_flock",
    "com_github_gookit_color",
    "com_github_jedib0t_go_pretty_v6",
    "com_github_lmittmann_tint",
    "com_github_mattn_go_runewidth",
    "com_github_openai_openai_go_v3",
    "com_github_qcom_it_nexa_ai_geniex_bindings_go",
    "com_github_schollz_progressbar_v3",
    "com_github_shirou_gopsutil",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_valyala_fasthttp",
    "dev_resty_v3",
    "org_golang_x_image",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
)

# ============ python ============

bazel_dep(name = "rules_python", version = "1.9.0")

# bazel_dep(
#     name = "rules_python_gazelle_plugin",
#     version = "1.9.0",
# )

# ============ others ============
