module(name = "geniex")

# ============ common ============

bazel_dep(name = "gazelle", version = "0.50.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

innosetup_repo = use_repo_rule("//cli/release/windows:iscc.bzl", "innosetup_repository")
innosetup_repo(name = "innosetup")

# ============ c/cpp ============

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

s3_sdk_repository = use_repo_rule("//sdk:s3_sdk_download.bzl", "s3_sdk_download")
s3_sdk_repository(name = "s3_sdk")

# ============ go ============

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

# hermetic cc toolchain
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:windows_arm64",
)

# go toolchain
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.13")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//cli:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_smithy_go",
    "com_github_bytedance_sonic",
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_huh_spinner",
    "com_github_dustin_go_humanize",
    "com_github_gin_gonic_gin",
    "com_github_gofrs_flock",
    "com_github_gookit_color",
    "com_github_jedib0t_go_pretty_v6",
    "com_github_lmittmann_tint",
    "com_github_mattn_go_runewidth",
    "com_github_openai_openai_go_v3",
    "com_github_qcom_it_nexa_ai_geniex_bindings_go",
    "com_github_schollz_progressbar_v3",
    "com_github_shirou_gopsutil",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_valyala_fasthttp",
    "dev_resty_v3",
    "org_golang_x_image",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
)


# ============ python ============

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(python_version = "3.12")

# bazel_dep(
#     name = "rules_python_gazelle_plugin",
#     version = "1.9.0",
# )

# ============ others ============
