module(name = "geniex")

# ============ common ============

bazel_dep(name = "gazelle", version = "0.50.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

# innosetup
innosetup_repo = use_repo_rule("//cli/release/windows:iscc.bzl", "innosetup_repository")
innosetup_repo(name = "innosetup")

# oci
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_distroless", version = "0.8.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "tar.bzl", version = "0.7.0")
tar_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(tar_toolchains, "bsd_tar_toolchains")
register_toolchains("@bsd_tar_toolchains//:all")
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "trixie",
    lock = "//cli/release/linux:trixie.lock.json",
    manifest = "//cli/release/linux:trixie.yaml",
)
use_repo(apt, "trixie")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    digest = "sha256:35b8ff74ead4880f22090b617372daff0ccae742eb5674455d542bef71ef1999",
    image = "index.docker.io/library/debian",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "13",
)
use_repo(oci, "debian", "debian_linux_amd64", "debian_linux_arm64_v8")

# ============ c/cpp ============

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# ============ go ============

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")

# hermetic cc toolchain
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:windows_arm64",
)

# go toolchain
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.9")
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//cli:go.mod")
use_repo(
    go_deps,
    "com_github_bytedance_sonic",
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_huh_spinner",
    "com_github_dustin_go_humanize",
    "com_github_gin_gonic_gin",
    "com_github_gofrs_flock",
    "com_github_gookit_color",
    "com_github_jedib0t_go_pretty_v6",
    "com_github_lmittmann_tint",
    "com_github_mattn_go_runewidth",
    "com_github_openai_openai_go_v3",
    "com_github_qcom_it_nexa_ai_geniex_bindings_go",
    "com_github_schollz_progressbar_v3",
    "com_github_shirou_gopsutil",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_valyala_fasthttp",
    "dev_resty_v3",
    "org_golang_x_image",
    "org_golang_x_mod",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
)

# ============ python ============

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# bazel_dep(
#     name = "rules_python_gazelle_plugin",
#     version = "1.9.0",
# )

# ============ others ============
