# gazelle:resolve go resty.dev/v3 @dev_resty_v3//:resty

load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

package(default_visibility = ["//visibility:public"])

exports_files(["go.mod"])

alias(
    name = "cli",
    actual = "//cli/cmd/geniex",
)

# package artifact

pkg_files(
    name = "_artifact_bin",
    srcs = ["//cli/cmd/geniex"],
    strip_prefix = strip_prefix.files_only(),
)

pkg_zip(
    name = "artifact",
    srcs = [
        ":_artifact_bin",
        "//sdk:artifact",
    ],
)
