package(default_visibility = ["//visibility:public"])

config_setting(
    name = "enable_geniex_debug",
    define_values = {"GENIEX_DEBUG": "1"},
)

config_setting(
    name = "enable_ggml_hexagon",
    define_values = {"GGML_HEXAGON": "1"},
)

config_setting(
    name = "disable_ggml_hexagon",
    define_values = {"GGML_HEXAGON": "0"},
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "android",
    constraint_values = ["@platforms//os:android"],
)

alias(
    name = "sdk",
    actual = "//sdk/src:geniex_lib"
)
