load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":runfiles.bzl", "sdk_local_bundle")

package(default_visibility = ["//visibility:public"])

# flags

string_flag(
    name = "sdk_type",
    build_setting_default = "local",
    values = ["s3", "local", "bazel"],
)

config_setting(name = "s3_sdk", flag_values = { ":sdk_type": "s3" })
config_setting(name = "local_sdk", flag_values = { ":sdk_type": "local" })

# local

sdk_local_bundle(
    name = "local_sdk_runtime",
    data = select({
        "@platforms//os:windows": glob([
            "pkg-geniex/lib/**/*.dll",
            "pkg-geniex/lib/**/*.so",
            "pkg-geniex/lib/**/*.cat",
        ], allow_empty = True),
        "@platforms//os:linux": glob(["pkg-geniex/lib/**/*.so"], allow_empty = True),
    }),
    strip_prefix = "sdk/pkg-geniex/lib/",
)

cc_library(
    name = "local_sdk_lib",
    hdrs = ["pkg-geniex/include/geniex.h"],
    includes = ["pkg-geniex/include"],
    srcs = select({
        "@platforms//os:windows": ["pkg-geniex/lib/geniex.dll"],
        "@platforms//os:linux": ["pkg-geniex/lib/libgeniex.so"],
    }),
    linkopts = select({
        "@platforms//os:linux": ["-Wl,-rpath,."],
        "//conditions:default": [],
    }),
    data = [":local_sdk_runtime"],
)

# exported targets

pkg_files(
    name = "artifact",
    srcs = select({
        ":local_sdk": [":local_sdk_runtime"],
        # ":s3_sdk": ["@s3_sdk//:sdk"],
    }),
    strip_prefix = strip_prefix.from_pkg("pkg-geniex/lib"),
)

alias(
    name = "sdk",
    actual = select({
        ":local_sdk": ":local_sdk_lib",
        # ":s3_sdk": "@s3_sdk//:sdk",
    }),
)
