load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//scripts:cgo_test.bzl", "go_cgo_test")

# The cgo test is wired through the go_cgo_test macro (it needs the SDK cdeps to
# resolve geniex_model.h); a plain gazelle-generated go_test for the same
# sources would miss those cdeps and fail to compile. Keep gazelle out of this
# file so it doesn't re-add one.
# gazelle:ignore

alias(
    name = "go",
    actual = ":geniex_sdk_go",
)

go_library(
    name = "geniex_sdk_go",
    srcs = [
        "common.go",
        "device.go",
        "helpers.go",
        "llm.go",
        "ml.go",
        "model_manager.go",
        "vlm.go",
    ],
    cdeps = ["//sdk"],
    cgo = True,
    importpath = "github.com/qcom-it-nexa-ai/geniex/bindings/go",
    visibility = ["//visibility:public"],
)

go_cgo_test(
    name = "geniex_sdk_go_test",
    srcs = [
        "common_test.go",
    ],
    embed = [":geniex_sdk_go"],
)
