[workspace]
members = [
    "crates/core",
    "crates/ffi",
]
resolver = "2"

# We deliberately leave `panic` at the default ("unwind") rather than
# setting it to "abort". The FFI layer relies on `std::panic::catch_unwind`
# (see `ffi::types::ffi_guard`) to convert Rust panics into error codes
# before they cross the C ABI boundary; `panic = "abort"` would disable
# unwinding and turn that safety net into a no-op.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "fs",
    "time",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
] }
async-trait = "0.1"
url = "2"
fs2 = "0.4"
wiremock = "0.6"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
