load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model_hub",
    srcs = [
        "model_hub.go",
        "model_hub_hf.go",
        "model_hub_localfs.go",
        "model_hub_modelscope.go",
        "model_hub_s3.go",
        "model_hub_volces.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/model_hub",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/downloader",
        "//cli/internal/render",
        "//cli/internal/types",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_smithy_go//logging",
        "@com_github_bytedance_sonic//:sonic",
        "@dev_resty_v3//:resty",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "model_hub_test",
    srcs = ["model_hub_test.go"],
    embed = [":model_hub"],
    deps = ["@com_github_lmittmann_tint//:tint"],
)
